配置文件描述文字修改

--- a/YiChuangFrameWork/res/YiChuangLibrary.bundle/stockList.plist
+++ b/YiChuangFrameWork/res/YiChuangLibrary.bundle/stockList.plist
@@ -31,7 +31,7 @@
 	<key>116</key>
 	<string>突破5日均线</string>
 	<key>117</key>
-	<string>BOLL开头变大</string>
+	<string>BOLL开口变大</string>
 	<key>161</key>
 	<string>封板量下降</string>
 	<key>162</key>
